[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/tower.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
radius = 1.0
mid_height = 1.0
radial_segments = 64
rings = 8

[sub_resource type="CapsuleShape" id=2]

radius = 1.0
height = 1.0

[node name="baseTower" type="Spatial"]

script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="." index="0"]

transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[node name="Area" type="Area" parent="." index="1"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]

transform = Transform( 2, 0, 0, 0, -8.74228e-008, -1, 0, 2, -4.37114e-008, 0, 0, 0 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]


