[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/tower.gd" type="Script" id=1]
[ext_resource path="res://media/PhysicalTower.obj" type="ArrayMesh" id=2]
[ext_resource path="res://media/shoot.wav" type="AudioStream" id=3]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 1, 1, 1 )

[node name="physTower" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="." index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 2 )
skeleton = NodePath("..")
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null
material/9 = null
material/10 = null
material/11 = null
material/12 = null
_sections_unfolded = [ "Transform" ]

[node name="Area" type="Area" parent="." index="1"]

transform = Transform( 1.8, 0, 0, 0, 1.8, 0, 0, 0, 1.8, 0, 0, 0 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1024
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]

transform = Transform( 2.49986, 6.0929e-012, 0.010563, 0.0264075, -1.15431e-009, -0.999944, 6.0929e-012, 2.5, -4.61724e-010, 0, 0, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = -30.0
pitch_scale = 0.7
autoplay = false
mix_target = 0
bus = "Master"

[node name="UpgradePoint" type="Position3D" parent="." index="3"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.34577, 0 )


